Refactored top level definitions (#1)
Refactored handling of top level elements

Co-authored-by: Andrei Shakirin <ashakirin@.gmail.com>